Modificação na parte do html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/src/css/reset.css" />
-        <link rel="stylesheet" href="/src/css/style.css" />
-        <link rel="stylesheet" href="/src/css/responsivo.css" />
-        <link rel="shortcut icon" href="src/imagens/pokebola.png" type="image/x-icon">
+        <link rel="stylesheet" href="/assets/css/reset.css" />
+        <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/responsivo.css" />
+        <link rel="shortcut icon" href="assets/imagens/pokebola.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Outfit&family=Pacifico&display=swap" rel="stylesheet">
@@ -16,13 +16,13 @@
     </head>
     <body>
         <header class="cabecalho">
-            <img src="src/imagens/pokebola.png" alt="pokébola" class="pokebola"/>
+            <img src="assets/imagens/pokebola.png" alt="pokébola" class="pokebola"/>
             <h1 class="titulo">MapaDev Week</h1>
         </header>
 
         <main class="pokemon-slider" >
             <button class="btn-seta btn-voltar" id="btn-voltar">
-                <img src="src/imagens/seta.png" alt="seta voltar">
+                <img src="assets/imagens/seta.png" alt="seta voltar">
             </button>
 
             <ul class="lista-pokemons">
@@ -32,11 +32,11 @@
                         <p class="vida">HP 300</p>
                     </div>
                     <div class="container-imagem">
-                        <img src="src/imagens/pikachu.png" alt="Pikachu" class="imagem-pokemon">
+                        <img src="assets/imagens/pikachu.png" alt="Pikachu" class="imagem-pokemon">
                     </div>
                     <div class="descricao">
                         <h3 class="titulo">Descrição</h3>
-                        <p class="texto">Os Pikachus são pequenos roedores de quarenta centímetros e de seis quilogramas, com um corpo redondo, pernas curtas e uma longa cauda, quando macho, a cauda tem um formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um coração na ponta.</p>
+                        <p class="texto">Os Pikachus são pequenos roedores de quarenta centímetros e de seis quilogramas, com um corpo redondo, pernas curtas e uma longa cauda, quando macho, a cauda tem um formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um coração na ponta.</p>   
                     </div>
                 </li>
 
@@ -46,7 +46,7 @@
                         <p class="vida">HP 300</p>
                     </div>
                     <div class="container-imagem">
-                        <img src="src/imagens/charizard.png" alt="Charizard" class="imagem-pokemon">
+                        <img src="assets/imagens/charizard.png" alt="Charizard" class="imagem-pokemon">
                     </div>
                     <div class="descricao">
                         <h3 class="titulo">Descrição</h3>
@@ -60,7 +60,7 @@
                         <p class="vida">HP 800</p>
                     </div>
                     <div class="container-imagem">
-                        <img src="src/imagens/mewtwo.png" alt="Mewtwo" class="imagem-pokemon">
+                        <img src="assets/imagens/mewtwo.png" alt="Mewtwo" class="imagem-pokemon">
                     </div>
                     <div class="descricao">
                         <h3 class="titulo">Descrição</h3>
@@ -70,9 +70,9 @@
             </ul>
 
             <button class="btn-seta" id="btn-avancar">
-                <img src="src/imagens/seta.png" alt="seta avancar">
+                <img src="assets/imagens/seta.png" alt="seta avancar">
             </button>
         </main>
-        <script src="src/js/index.js"></script>
+        <script src="assets/js/index.js"></script>
     </body>
 </html>
