--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://guillehs.github.io/pokemon-cards/assets/css/reset.css"/>
-        <link rel="stylesheet" href="https://guillehs.github.io/pokemon-cards/assets/css/style.css"/>
-        <link rel="stylesheet" href="https://guillehs.github.io/pokemon-cards/assets/css/responsivo.css" />
+        <link rel="stylesheet" href="./assets/css/reset.css"/>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
+        <link rel="stylesheet" href="./assets/css/responsivo.css" />
         <link rel="shortcut icon" href="assets/imagens/pokebola.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,6 +73,6 @@
                 <img src="assets/imagens/seta.png" alt="seta avancar">
             </button>
         </main>
-        <script src="https://guillehs.github.io/pokemon-cards/assets/js/index.js"></script>
+        <script src="./assets/js/index.js"></script>
     </body>
 </html>
